# RJ

./: .gitignore  Cargo.toml  Makefile  README.md  test.go  test.rj
dot/src/: lib.rs
dot_derive/: Cargo.toml
dot_derive/src/: lib.rs
example/: main.c  main.rj  test.ll  test.rj
projects/dot/: Cargo.toml
projects/rjc/: Cargo.toml
projects/rjc/src/: config.rs  main.rs
projects/rjc_ast/: Cargo.toml
projects/rjc_ast/src/: ast.rs  ast_macros.rs  block.rs  call.rs  function.rs  ident.rs  lib.rs  module.rs  pool.rs  pool_macros.rs  symbol.rs  types.rs  variable.rs
projects/rjc_ast/src/expression/: cmp.rs  expression.rs  list.rs  literal.rs  mod.rs  sum.rs
projects/rjc_ast/src/statement/: assignment.rs  if_.rs  mod.rs  return_.rs  statement.rs
projects/rjc_parser/: Cargo.toml
projects/rjc_resolver/: Cargo.toml
src/: ast_type.rs  block.rs  config.rs  const_data.rs  equal.rs  expression.rs  file.rs  function.rs  ident.rs  if_stmt.rs  main.rs  rj.pest  scope.rs  stmt.rs  symbol_ref.rs
src/ast/: ast_type.rs  block.rs  call.rs  error.rs  file.rs  function.rs  ident.rs  mod.rs  module.rs  pool.rs  statement.rs  symbol.rs  types.rs  variable.rs
src/ast_old/: error.rs  file.rs  ident.rs  ircontext.rs
src/ast_pool/: block.rs  function.rs  mod.rs  module.rs  pool.rs  symbol.rs  (+2 more)
stdlib/: start.ll
test/: assign.rj  bool.rj  cmp_eq.rj  cmp_ge.rj  cmp_gt.rj  cmp_le.rj  cmp_lt.rj  cmp_ne.rj  else.rj  eq_var.rj  fib.rj  func_call_const.rj  func_call_multiple.rj  func_call_nested.rj  func_call_var.rj  if.rj  if_neg.rj  if_pos.rj  main.rj  stmt_func_call.rj  sum.rj
(+79 files in other folders)
